[project]
name = "mtcli-conta"
version = "0.1.0"
description = "Plugin mtcli para exibir dados da conta"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "mtcli (>=1.19.4,<2.0.0)"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-conta"
repository = "https://github.com/vfranca/mtcli-conta"
documentation = "https://vfranca.github.io/mtcli-conta"
issues = "https://github.com/vfranca/mtcli-conta/issues"

[project.entry-points."mtcli.plugins"]
conta = "mtcli_conta.conta:conta"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.11"
pytest = "^8.4.1"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
isort = "^6.0.1"

[tool.pytest.ini_options]
addopts = "--cov=mtcli_conta --cov-report=html -ra -q"
